# RAG-for-NPC-Game-Characters

./: .gitignore  README.md  main.py  pyproject.toml  rag.py  requirements.txt
ollama/: README.md  ollama_rest_api.ipynb
rag_with_qdrant/: info_store.ipynb  requirements.txt  test.py
rag_with_qdrant/corpus/: the_wonderful_wizard_of_oz.txt
research/: info_retrieve.ipynb  info_store.ipynb  rag_testing.ipynb  requirements.txt  test_text_model_nb.ipynb  test_text_model_nb_1.ipynb
templates/: index.html
