[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "tharhtetsan",email = "tharhtetsan.ai@gmail.com"}
]
requires-python = ">=3.11,<4"
dependencies = [
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)",
    "faiss-cpu (>=1.14.2,<2.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "flask (>=3.1.3,<4.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]